--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Exercício</title>
-    
+
     <style>
-      main, section {
+      main,
+      section {
         border-color: black;
         border-style: solid;
       }
@@ -31,9 +32,9 @@
     </style>
   </head>
   <body>
-    <header> 
+    <header>
       <h1 class="title">Desafio - JavaEscripito</h1>
-    </header>    
+    </header>
     <main class="main-content">
       <section class="center-content">
         <p>Texto padrão do nosso site</p>
@@ -46,6 +47,19 @@
     </footer>
     <script>
       // Seu código aqui
+      function changeText() {
+        const text = document.querySelector(".center-content").children[1].innerText = 'Alterado';
+      }
+      changeText()
+
+      function changeColor() {
+        const color = document.querySelector('.main-content').style.backgroundColor = 'rgb(76, 164, 109)'
+      }
+      changeColor()
+
+      
+
+
       // Iniciando pullrequest
     </script>
   </body>
