--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
       }
       changeColor()
 
-      
+      function changeColorWhite() {
+        const color = document.querySelector('.center-content').style.backgroundColor = 'white'
+      }
+      changeColorWhite()
+
+      function changeTitle() {
+        const text = document.querySelector(".title").innerText = 'Desafio - JavaScript';
+      }
+      changeTitle()
+
+
 
 
       // Iniciando pullrequest
