--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
       }
       changeTitle()
 
+      function changeUpperCase() {
+        let text = document.querySelector('p').innerText.toLocaleUpperCase()
+        
+        // text.style.textTransform = 'uppercase'
+        let result = text.toLocaleUpperCase()
+        console.log(text)
+
+      }
+      changeUpperCase()
+
+
+
 
 
 
