--- a/index.html
+++ b/index.html
@@ -48,38 +48,40 @@
     <script>
       // Seu código aqui
       function changeText() {
-        const text = document.querySelector(".center-content").children[1].innerText = 'Alterado';
+        const text = (document.querySelector(
+          ".center-content"
+        ).children[1].innerText = "Alterado");
       }
-      changeText()
+      changeText();
 
       function changeColor() {
-        const color = document.querySelector('.main-content').style.backgroundColor = 'rgb(76, 164, 109)'
+        const color = (document.querySelector(
+          ".main-content"
+        ).style.backgroundColor = "rgb(76, 164, 109)");
       }
-      changeColor()
+      changeColor();
 
       function changeColorWhite() {
-        const color = document.querySelector('.center-content').style.backgroundColor = 'white'
+        const color = (document.querySelector(
+          ".center-content"
+        ).style.backgroundColor = "white");
       }
-      changeColorWhite()
+      changeColorWhite();
 
       function changeTitle() {
-        const text = document.querySelector(".title").innerText = 'Desafio - JavaScript';
+        const text = (document.querySelector(".title").innerText =
+          "Desafio - JavaScript");
       }
-      changeTitle()
+      changeTitle();
 
       function changeUpperCase() {
-        let text = document.querySelector('p').innerText.toLocaleUpperCase()
-        
-        // text.style.textTransform = 'uppercase'
-        let result = text.toLocaleUpperCase()
-        console.log(text)
-
+        let text = document.querySelector("p")
+        text.innerText = text.innerText.toUpperCase();
+        console.log (text)
       }
-      changeUpperCase()
+      changeUpperCase();
 
-
-
-
+     
 
 
       // Iniciando pullrequest
